# nobledragon

./: .gitignore  README.md
code/app/cmake-test/: CMakeLists.txt  HardFaultHandler.c  README.md  build.py  conanfile.py  freertos_hooks.c  freertos_hooks.h  freertos_idletest.c
code/app/cmake-test/configs/: FreeRTOSConfig.h  lwipopts.h
code/app/lwip_tcpecho_freertos/: CMakeLists.txt  build.py  lwip_tcpecho_freertos.c
code/app/lwip_tcpecho_freertos/configs/: FreeRTOSConfig.h
code/app/periph_blinky/: CMakeLists.txt
code/libs/chip-175x-6x/: CMakeLists.txt
code/libs/electric-ninja-platform/: CMakeLists.txt  build.py  conanfile.py
code/libs/electric-ninja-platform/include/electricninjaplatform/: platform.h
code/libs/electric-ninja-platform/ports/micromint-lincoln60/include/electricninjaplatform/: platformPort.h
code/libs/electric-ninja-platform/ports/micromint-lincoln60/src/: hardFaultHandler.c  platform.cpp
code/libs/electric-ninja-platform/ports/micromint-lincoln60/src/include-private/electricninjaplatform/: platformInternal.h
code/libs/electric-ninja-platform/ports/micromint-lincoln60/src/include-private/electricninjaplatform/configs/: FreeRTOSConfig.h  lwipopts.h  lwippools.h
code/libs/lpc-board-lincoln/: CMakeLists.txt  conanfile.py
code/libs/lpc/lpc-board-lincoln/: CMakeLists.txt
code/libs/lpc/lpc-chip-175x-6x/: CMakeLists.txt  build.py  conanfile.py
projects/: test1.jflash
